# clispot

./: .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod  go.sum  install.md  install.ps1  install.sh  main.go  pyproject.toml  update_headless.sh
.github/: release-drafter.yml
.github/workflows/: commitlint.yml  goreleaser.yml  lint.yml  publish-docker-image.yml  release-drafter.yml  test.yml
assets/: assets.go
backend/: backend.go  start.go
cmd/: install.go  log.go  man.go  root.go  root_test.go  version.go
completions/: clispot.bash  clispot.fish  clispot.zsh
docs/: guide.md  index.html  install.md  script.js  styles.css
grpc_server/: main.py
internal/command/: cmd_darwin.go  cmd_linux.go  cmd_windows.go
internal/config/: config.go  config_test.go
internal/headless/: headless.go
internal/install/: ffmpeg.go  install.go  install_darwin.go  install_linux.go  install_windows.go  yt-dlp.go
internal/logger/: logger.go
internal/lyrics/: lyrics.go
internal/mpris/: mpris.go  mpris_darwin.go  mpris_linux.go  mpris_windows.go
internal/notification/: notify.go
internal/spotify/: authenticate.go  spotify.go  spotify_test.go
internal/types/: albums.go  artist.go  mapper.go  msgs.go  playlist.go  search.go  track.go  user.go
internal/ui/: renderers.go  styles.go  ui.go  update.go
internal/youtube/: youtube.go
internal/yt-music-client/: client.go
proto/: music.proto
scripts/: completions.sh  manpages.sh
tools/: tools.go
(+3 files in other folders)
